--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
     width: 320px;
     height: 260px;
     border: 1px solid #333;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 header {
@@ -31,23 +32,31 @@ header img {
 footer {
     background: red;
     width: 100%;
-    height: 34px;
+    height: 35px;
     position: absolute;
     left: 0;
     bottom: 0;
     text-align: center;
 }
 
-button {
-    margin: 4px 0;
-    background: red;
+a {
+    margin: 5px 3px;
+    /*background: red;*/
     color: white;
     display: inline-block;
-    padding: 4px 4px 4px 20px;
     text-align: center;
-    width: 90px;
     border-radius: 5px;
     border: 2px solid white;
+    white-space: nowrap;
+    padding: 2px 4px 4px 4px;
+    font-size: 12px;
+    text-decoration: none;
+}
+
+svg {
+    vertical-align: middle;
+    width: 16px;
+    height: 15px;
 }
 
 .overlay {
@@ -56,26 +65,53 @@ button {
     top: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, .5);
+    background: rgba(122, 122, 122, .8);
+    -webkit-transform-style: preserve-3d;
+    transform-style: preserve-3d;
+    color: #fff;
 }
 
-.overlay .cross {
+.overlay .icon-close {
     position: absolute;
-    top: 12px;
-    right: 12px;
-    border: 2px solid white;
-    color: white;
-    text-align: center;
-    font-weight: bold;
-    width: 18px;
-    height: 18px;
-    line-height: 18px;
-    border-radius: 50%;
+    top: 4px;
+    right: 5px;
+    width: 24px;
+    height: 24px;
 }
 
-.vertical-center {
+.overlay .centered {
     position: absolute;
+    left: 50%;
     top: 50%;
-    -webkit-transform: translateY(-50%);
-    transform: translateY(-50%);
+    -webkit-transform: translateY(-50%) translateX(-50%);
+    -ms-transform: translateY(-50%) translateX(-50%);
+    transform: translateY(-50%) translateX(-50%);
+    width: 205px;
+}
+
+.centered div {
+    text-align: center;
+    font-size: 16px;
+}
+
+.icon {
+    display: inline-block;
+    margin: 16px;
+}
+
+.icon svg {
+    width: 32px;
+    height: 32px;
+}
+
+div.coupon-code {
+    background: rgb(255, 56, 35);
+    border-radius: 4px;
+    border: 1px solid white;
+    font-size: 14px;
+    height: 34px;
+    width: 226px;
+    margin-top: 4px;
+    margin-bottom: 18px;
+    line-height: 34px;
 }
