--- a/style.css
+++ b/style.css
@@ -1,7 +1,5 @@
 html,
 body {
-    /*width: 100%;*/
-    /*height: 100%;*/
     margin: 0;
     position: relative;
     width: 320px;
@@ -42,7 +40,8 @@ a {
     text-decoration: none;
 }
 
-footer a {
+footer > a {
+    min-width: 87px;
     margin: 5px 3px;
     display: inline-block;
     text-align: center;
@@ -74,7 +73,7 @@ footer svg {
     display: none;
 }
 
-.overlay .icon-close {
+#button-close {
     position: absolute;
     top: 4px;
     right: 5px;
@@ -109,7 +108,6 @@ footer svg {
 }
 
 div.coupon-code {
-    /*background: rgb(255, 56, 35);*/
     border-radius: 4px;
     border-width: 1px;
     border-style: solid;
