--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-html,
-body {
-    margin: 0;
+.coupon_wrapper {
+    /*width: 100%;*/
+    /*height: 100%;*/
     position: relative;
     width: 320px;
     height: 260px;
@@ -8,26 +8,26 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-header {
+#coupon_header {
     position: relative;
     height: calc(100% - 34px);
 }
 
-header img {
+#coupon_mainImg {
     width: 100%;
     height: 100%;
 }
 
-.bottom-stripe {
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 16px;
-    line-height: 16px;
-}
+/*#coupon_bottom-stripe {*/
+    /*position: absolute;*/
+    /*left: 0;*/
+    /*bottom: 0;*/
+    /*width: 100%;*/
+    /*height: 16px;*/
+    /*line-height: 16px;*/
+/*}*/
 
-footer {
+#coupon_footer {
     width: 100%;
     height: 35px;
     position: absolute;
@@ -36,11 +36,8 @@ footer {
     text-align: center;
 }
 
-a {
+#coupon_footer > a {
     text-decoration: none;
-}
-
-footer > a {
     min-width: 87px;
     margin: 5px 3px;
     display: inline-block;
@@ -54,14 +51,14 @@ footer > a {
     cursor: pointer;
 }
 
-footer svg {
+#coupon_footer svg {
     vertical-align: middle;
     width: 16px;
     height: 15px;
     margin-right: 4px;
 }
 
-.overlay {
+#coupon_overlay {
     position: absolute;
     left: 0;
     top: 0;
@@ -73,7 +70,7 @@ footer svg {
     display: none;
 }
 
-#button-close {
+#coupon_button-close {
     position: absolute;
     top: 4px;
     right: 5px;
@@ -82,7 +79,7 @@ footer svg {
     cursor: pointer;
 }
 
-.overlay .centered {
+#coupon_overlay .coupon_centered {
     position: absolute;
     left: 50%;
     top: 50%;
@@ -92,22 +89,22 @@ footer svg {
     width: 226px;
 }
 
-.centered div {
+.coupon_centered div {
     text-align: center;
     font-size: 16px;
 }
 
-.icon {
+.coupon_icon {
     display: inline-block;
     margin: 16px 16px 0 16px;
 }
 
-.icon svg {
+.coupon_icon svg {
     width: 32px;
     height: 32px;
 }
 
-div.coupon-code {
+div.coupon_code {
     border-radius: 4px;
     border-width: 1px;
     border-style: solid;
@@ -119,6 +116,6 @@ div.coupon-code {
     line-height: 34px;
 }
 
-#couponCodeBlock {
+#coupon_codeBlock {
     display: none;
 }
